# env_sensor

./: README.md  VERSION  west.yml
.github/workflows/: build.yaml  code_formatting.yaml  pull_request.yaml
Hardware_files/sham_nrf52833/: bom.xls  temp_rh_sensor.kicad_pcb  temp_rh_sensor.kicad_pro  temp_rh_sensor.kicad_sch
app/: CMakeLists.txt  Kconfig  prj.conf
app/src/: events_svc.c  events_svc.h  humidity_temperature_svc.c  humidity_temperature_svc.h  main.c  user_interface.c  user_interface.h  zb_environmental_sensor.h  zigbee_svc.c  zigbee_svc.h
boards/arm/: nrf52840dk_nrf52840.overlay
boards/arm/sham_nrf52833/: Kconfig.defconfig  Kconfig.sham_nrf52833  board.cmake  board.yml  sham_nrf52833-pinctrl.dtsi  sham_nrf52833.dts  sham_nrf52833.yaml  sham_nrf52833_defconfig
zephyr/: module.yml
